--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager navigation;
 @using SourceCode;
 @using SourceCode.Vendas;
+@inject SistemaFeiras facade;
 
 <PageTitle>Compra rápida</PageTitle>
 <h2>Compra rápida</h2>
@@ -31,7 +32,7 @@
 	private string numeroCartao = "";
 	public void Confirmar()
 	{
-		SistemaFeiras.GetInstance().AddVenda(venda);
+		facade.AddVenda(venda);
 		ShowStandComponent showStandComponent = ShowStandComponent.GetInstance();
 		showStandComponent.ShowStand("Compra registada");
 
